--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         </activity>
         <activity android:name=".Activity.HomeActivity" />
         <activity android:name=".Activity.WelcomeActivity" />
-        <activity android:name=".Activity.SelfDataActivity"></activity>
+        <activity android:name=".Activity.SelfDataActivity" />
+        <activity android:name=".Activity.SelfDataActivityTwo"></activity>
     </application>
 
 </manifest>
