--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.text.ysq.lanrenzhoumo">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,7 +20,9 @@
         <activity android:name=".Activity.HomeActivity" />
         <activity android:name=".Activity.WelcomeActivity" />
         <activity android:name=".Activity.SelfDataActivity" />
-        <activity android:name=".Activity.SelfDataActivityTwo"></activity>
+        <activity android:name=".Activity.SelfDataActivityTwo" />
+        <activity android:name=".Activity.SettingActivity" />
+        <activity android:name=".Activity.LogingActivity"></activity>
     </application>
 
 </manifest>
